--- a/views/Admin/login.hbs
+++ b/views/Admin/login.hbs
@@ -11,7 +11,7 @@
   <body>
     <div>
       <nav class="navbar navbar-expand-xl" style="color:orange; align-items: center; justify-content:center; font-size: 3rem">
-        TechHub
+        <a href="/admin" style="color:orange;">TechHub</a>
       </nav>
     </div>
     <div class="container tm-mt-big tm-mb-big">
@@ -25,7 +25,7 @@
             </div>
             <div class="row mt-2">
               <div class="col-12">
-                <form action="index.html" method="post" class="tm-login-form">
+                <form action="/home" method="post" class="tm-login-form">
                   <div class="form-group">
                     <label for="username">Username</label>
                     <input
@@ -66,15 +66,7 @@
         </div>
       </div>
     </div>
-    <footer class="tm-footer row tm-mt-small">
-      <div class="col-12 font-weight-light">
-        <p class="text-center text-white mb-0 px-4 small">
-          Copyright &copy; <b>2018</b> All rights reserved. 
-          
-          Design: <a rel="nofollow noopener" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
-        </p>
-      </div>
-    </footer>
+    {{> footerAdmin}}
     {{> scriptAdmin}}
   </body>
 </html>
