--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -1,4 +1,4 @@
-<div class="hero_area">
+
 <!-- header section strats -->
 <header class="header_section">
   <div class="header_top">
@@ -31,7 +31,7 @@
               My Account
             </span>
           </a>
-          <a href="" class="cart-link">
+          <a href="cart" class="nav-link">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             <span>
               Cart
@@ -47,7 +47,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="/views/home.hbs">
           <span>
-            TechHub
+            Minics
           </span>
         </a>
 
@@ -79,4 +79,3 @@
   </div>
 </header>
 <!-- end header section -->
-</div>
