--- a/views/Partial/headerAdmin.hbs
+++ b/views/Partial/headerAdmin.hbs
@@ -23,6 +23,13 @@
             <span class="sr-only">(current)</span>
         </a>
         </li>
+
+        <li class="nav-item">
+        <a class="nav-link" href="/Admin/manages">
+            <i class="fas fa-user"></i> Manage Account
+        </a>
+        </li>
+
         {{!-- <li class="nav-item dropdown">
         <a
             class="nav-link dropdown-toggle"
