--- a/views/User/home.hbs
+++ b/views/User/home.hbs
@@ -53,7 +53,7 @@
                   My Account
                 </span>
               </a>
-              <a href="" class="cart-link">
+              <a href="cart" class="nav-link">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                 <span>
                   Cart
