--- a/views/User/why.hbs
+++ b/views/User/why.hbs
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Minics</title>
+  <title>TechHub</title>
 
   {{> link}}
 
