--- a/views/Admin/login.hbs
+++ b/views/Admin/login.hbs
@@ -25,7 +25,7 @@
             </div>
             <div class="row mt-2">
               <div class="col-12">
-                <form action="/home" method="post" class="tm-login-form">
+                <form action="/admin" method="post" class="tm-login-form">
                   <div class="form-group">
                     <label for="username">Username</label>
                     <input
