--- a/views/Partial/headerAdmin.hbs
+++ b/views/Partial/headerAdmin.hbs
@@ -18,15 +18,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto h-100">
         <li class="nav-item">
-        <a class="nav-link" href="/Admin">
-            <i class="fas fa-tachometer-alt"></i> Dashboard
-            <span class="sr-only">(current)</span>
-        </a>
+            <a class="nav-link" href="/Admin">
+                <i class="fas fa-tachometer-alt"></i> Dashboard
+                <span class="sr-only">(current)</span>
+            </a>
         </li>
 
         <li class="nav-item">
         <a class="nav-link" href="/Admin/manages">
-            <i class="fas fa-user"></i> Manage Account
+            <i class="fas fa-users"></i> Manage Account
         </a>
         </li>
 
