complete directory in admin folder

--- a/views/Admin/products.hbs
+++ b/views/Admin/products.hbs
@@ -164,7 +164,7 @@
             </div>
             <!-- table container -->
             <a
-              href="add-product.html"
+              href="/admin/products/add"
               class="btn btn-primary btn-block text-uppercase mb-3">Add new product</a>
             <button class="btn btn-primary btn-block text-uppercase">
               Delete selected products
