--- a/views/Partial/headerAdmin.hbs
+++ b/views/Partial/headerAdmin.hbs
@@ -26,7 +26,7 @@
 
         <li class="nav-item">
         <a class="nav-link" href="/Admin/manages">
-            <i class="fas fa-user"></i> Manage Account
+            <i class="fa fa-users"></i> Manage Account
         </a>
         </li>
 
