--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -31,6 +31,11 @@ a:hover {
 button:focus {
   outline: 0;
 }
+.separator{
+  width: 90%;
+  border-top: 1px solid var(--primary1);
+  border-style:dashed;
+}
 .navbar-brand {
   display: flex;
   align-items: center;
@@ -77,12 +82,57 @@ button:focus {
   height: 100%;
   max-height: 450px;
 }
+.tm-block-info-container{
+  height: 0%;
+  width: 100%;
+  max-height: auto;
+  background-color: var(--primary2);
+  color: var(--primary1)
+}
+
+.tm-block-info-container .row{
+  align-items: center;
+}
+
+.tm-block-info-container .row .title{
+  font-size:large;
+  font-weight: bold;
+}
+
 .tm-block-avatar,
 .tm-block-settings {
   max-height: none;
 }
 .tm-block-avatar {
   height: auto;
+}
+.tm-circular-avatar-container{
+  position: relative;
+  width: 100%;
+  border-radius: 50%;
+  border: 4px solid var(--primary2);
+}
+.tm-circular-avatar-container::after{
+  content: "";
+  display: block;
+  padding-bottom: 100%; /* The padding depends on the width, not on the height, so with a padding-bottom of 100% you will get a square */
+}
+.tm-circular-avatar-container img{
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; /* Make the picture taking the size of it's parent */
+  width: 100%; /* This if for the object-fit */
+  height: 100%; /* This if for the object-fit */
+  object-fit: cover; /* Equivalent of the background-size: cover; of a background-image */
+  object-position: center;
+}
+.tm-avatar-title{
+  margin-top: 20px;
+  font-size: xx-large;
+  color: var(--primary2);
 }
 .tm-block-h-auto {
   min-height: 1px;
@@ -335,7 +385,7 @@ thead {
   margin-bottom: 15px;
 }
 .btn {
-  border-radius: 0;
+  border-radius: 5px;
   padding: 13px 28px;
   transition: all 0.2s ease;
   max-width: 100%;
@@ -356,6 +406,41 @@ thead {
   background-color: transparent;
   border: 2px solid var(--primary2);
 }
+
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: var(--primary3);
+  background-color: var(--primary2);
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid var(--primary2);
+}
+
+.pagination a.active {
+  background-color: var(--primary1);
+  color: var(--primary2);
+  border: 1px solid var(--primary2);
+}
+
+.pagination a:hover:not(.active) {
+  background-color: transparent;
+  color: var(--primary2);
+}
+
+.pagination a:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.pagination a:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
 .custom-file-input {
   cursor: pointer;
 }
@@ -429,7 +514,7 @@ input[type="checkbox"] {
   transition: all 0.1s linear;
 }
 input[type="checkbox"]:checked {
-  background: url(../img/check-mark.png) #394e64 center no-repeat;
+  background: url(../img/check-mark.png) #f2b01e center no-repeat;
 }
 input[type="checkbox"]:focus {
   outline: 0 none;
