path for rendering and pagination helper

--- a/views/Admin/user-detail.hbs
+++ b/views/Admin/user-detail.hbs
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{{> linkAdmin}}
+
 <body>
+    {{>headerAdmin}}
     <div class="row mt-4">
         <div class="col-9">
             <div class="tm-bg-primary-dark tm-block">
@@ -43,7 +40,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-end py-4">
-                    <a class="btn btn-primary text-uppercase" href="index.html">
+                    <a class="btn btn-primary text-uppercase" href="">
                         Delete this account
                     </a>
                 </div>
