--- a/views/Admin/manage-users.hbs
+++ b/views/Admin/manage-users.hbs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    {{> headerAdmin}}
     {{> linkAdmin}}
-
+    {{> headerAdmin}}
   <body>
     <div class="container mt-5">
         <div class="row tm-content-row">
@@ -21,6 +20,19 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr>
+                                    <th scope="row"><input type="checkbox" /></th>
+                                    <td class="tm-product-name" onclick="location.href='./user-detail';" style="cursor: pointer;">Lorem</td> <!--TODO add name-->
+                                    <td>1/1/2022</td> <!--TODO add date-->
+                                    <td>550</td> <!--TODO add total-->
+                                    <td>Active</td> <!--TODO add status-->
+                                    <td>
+                                        <a href="#" class="tm-product-delete-link">
+                                            <!--TODO add id-->
+                                            <i class="far fa-trash-alt tm-product-delete-icon"></i>
+                                        </a>
+                                    </td>
+                                </tr>
                                 <!--TODO add {{#items}}-->
                                 <tr>
                                     <th scope="row"><input type="checkbox" /></th>
