--- a/views/Partial/footer.hbs
+++ b/views/Partial/footer.hbs
@@ -6,7 +6,7 @@
           <h5>
             <a href="" class="navbar-brand">
               <span>
-                Minics
+                TechHub
               </span>
             </a>
           </h5>
@@ -41,27 +41,27 @@
           </h5>
           <ul>
             <li>
-              <a href="index.html">
+              <a href="./">
                 Home
               </a>
             </li>
             <li>
-              <a href="about.html">
+              <a href="./about">
                 About
               </a>
             </li>
             <li>
-              <a href="product.html">
+              <a href="./product">
                 Products
               </a>
             </li>
             <li>
-              <a href="why.html">
+              <a href="./why">
                 Why Us
               </a>
             </li>
             <li>
-              <a href="testimonial.html">
+              <a href="./testimoninal">
                 Testimonial
               </a>
             </li>
@@ -81,16 +81,16 @@
           </form>
           <div class="social_box">
             <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
+              <i class="fab fa-facebook" aria-hidden="true"></i>
             </a>
             <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <i class="fab fa-twitter" aria-hidden="true"></i>
             </a>
             <a href="">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
+              <i class="fab fa-instagram" aria-hidden="true"></i>
             </a>
             <a href="">
-              <i class="fa fa-youtube" aria-hidden="true"></i>
+              <i class="fab fa-youtube" aria-hidden="true"></i>
             </a>
           </div>
         </div>
@@ -98,17 +98,3 @@
     </div>
   </div>
 </section>
-
-<!-- end info_section -->
-
-
-<!-- footer section -->
-<footer class="footer_section">
-  <div class="container">
-    <p>
-      &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
-  </div>
-</footer>
-<!-- footer section -->
