--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,7 +217,7 @@ a:focus {
 .navbar-brand {
   padding: 0;
   margin: 0;
-  color: #000000;
+  color: orange;
   font-weight: bold;
   font-size: 28px;
   font-weight: bold;
@@ -800,3 +800,58 @@ a:focus {
   color: inherit;
 }
 /*# sourceMappingURL=style.css.map */
+/* Dropdown Button */
+.dropbtn {
+  color: white;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 2;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: orange;}
+
+.hub {
+  font-family: sans-serif;
+  font-weight: bold;
+  position: relative;
+  
+  }
+  
+  .hub span:nth-child(2) {
+  background: #FF9900;
+  color: #000000;
+  border-radius: 15px;
+  
+  padding: 5px 10px 5px 10px;
+  display: inline-block;
+  }
