--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -45,10 +45,9 @@
   <div class="header_bottom">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
-        <a class="navbar-brand" href="/views/home.hbs">
-          <span>
-            Minics
-          </span>
+        <a class="navbar-brand hub" href="./">
+          <span>Tech</span>
+          <span>Hub</span>
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,20 +56,26 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ">
-            <li class="nav-item active">
-              <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="./">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="about.html"> About</a>
+              <a class="nav-link" href="./about"> About</a>
+            </li>
+            <li class="nav-item dropdown dropbtn">
+                  <a class="nav-link" href="./product">Products</a>
+                  <div class="dropdown-content">
+                    <a href="product.html">Phone</a>
+                    <a href="product.html">Laptop</a>
+                    <a href="product.html">Tablet</a>
+                    <a href="product.html">Accessories</a>
+                  </div>
+                </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./why">Why Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product.html">Products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="why.html">Why Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="testimonial.html">Testimonial</a>
+              <a class="nav-link" href="./testimoninal">Testimonial</a>
             </li>
           </ul>
         </div>
