--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -65,10 +65,10 @@
             <li class="nav-item dropdown dropbtn">
                   <a class="nav-link" href="./product">Products</a>
                   <div class="dropdown-content">
-                    <a href="product.html">Phone</a>
-                    <a href="product.html">Laptop</a>
-                    <a href="product.html">Tablet</a>
-                    <a href="product.html">Accessories</a>
+                    <a href="./product">Phone</a>
+                    <a href="./product">Laptop</a>
+                    <a href="./product">Tablet</a>
+                    <a href="./product">Accessories</a>
                   </div>
                 </li>
             <li class="nav-item">
