--- a/views/User/productDetail.hbs
+++ b/views/User/productDetail.hbs
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
-    <head>
-        <!-- Basic -->
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <!-- Mobile Metas -->
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <!-- Site Metas -->
-        <link rel="icon" href="images/fevicon.png" type="image/gif" />
-        <meta name="keywords" content="" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-      
-        <title>TechHup</title>
-       {{> link}}
-        
-      </head>
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <link rel="icon" href="img/fevicon.png" type="image/gif" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
 
-<body>
+  <title>TechHub</title>
+  {{> link}}
+
+</head>
+
+<body class="sub_page">
     {{> header}}
 
     <!-- Modal -->
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-lg-5 mt-5">
                     <div class="card mb-3">
-                        <img class="card-img img-fluid" src="images/p1.png" alt="Card image cap" id="product-detail">
+                        <img class="card-img img-fluid" src="/public/img/p1.png" alt="Card image cap" id="product-detail">
                     </div>
                     <div class="row">
                         <!--Start Controls-->
@@ -67,17 +67,17 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="images/p1.png" alt="Product Image 1">
+                                                <img class="card-img img-fluid" src="/public/img/p1.png" alt="Product Image 1">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="images/p1.png" alt="Product Image 2">
+                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 2">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="images/p1.png" alt="Product Image 3">
+                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 3">
                                             </a>
                                         </div>
                                     </div>
@@ -89,17 +89,17 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="images/p1.pngg" alt="Product Image 4">
+                                                <img class="card-img img-fluid" src="img/p1.pngg" alt="Product Image 4">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="images/p1.png" alt="Product Image 5">
+                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 5">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="images/p1.png" alt="Product Image 6">
+                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 6">
                                             </a>
                                         </div>
                                     </div>
@@ -111,17 +111,17 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="images/p1.png" alt="Product Image 7">
+                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 7">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="images/p1.png" alt="Product Image 8">
+                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 8">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="images/p1.png" alt="Product Image 9">
+                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 9">
                                             </a>
                                         </div>
                                     </div>
@@ -227,13 +227,13 @@
                 <h4>Related Products</h4>
                 <div class="row">
                     <div class="col-lg-3">
-                        <img src="images/p1.png" alt="">
+                        <img src="img/p1.png" alt="">
                     </div>
                     <div class="col-lg-3">
-                        <img src="images/p2.png" alt="">
+                        <img src="img/p2.png" alt="">
                     </div>
                     <div class="col-lg-3">
-                        <img src="images/p3.png" alt="">
+                        <img src="img/p3.png" alt="">
                     </div>
                 </div>
             </div>
@@ -244,53 +244,7 @@
 
     <!-- Start Footer -->
     {{> footer}}
-  <!-- footer section -->
-
-    <!-- End Footer -->
-
-    <!-- Start Script -->
-    <script src="assets/js/jquery-1.11.0.min.js"></script>
-    <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/templatemo.js"></script>
-    <script src="assets/js/custom.js"></script>
-    <!-- End Script -->
-
-    <!-- Start Slider Script -->
-    <script src="assets/js/slick.min.js"></script>
-    <script>
-        $('#carousel-related-product').slick({
-            infinite: true,
-            arrows: false,
-            slidesToShow: 4,
-            slidesToScroll: 3,
-            dots: true,
-            responsive: [{
-                    breakpoint: 1024,
-                    settings: {
-                        slidesToShow: 3,
-                        slidesToScroll: 3
-                    }
-                },
-                {
-                    breakpoint: 600,
-                    settings: {
-                        slidesToShow: 2,
-                        slidesToScroll: 3
-                    }
-                },
-                {
-                    breakpoint: 480,
-                    settings: {
-                        slidesToShow: 2,
-                        slidesToScroll: 3
-                    }
-                }
-            ]
-        });
-    </script>
-    <!-- End Slider Script -->
-
+    {{> script}}
 </body>
 
 </html>
