delete over-flow: hidden in tag html, change nav position from relative to stick. Create order list file and add into nav. Create user-product-detail controller. Fix url in some files

--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -13,7 +13,7 @@ https://templatemo.com/tm-524-product-admin
 
 html {
   font-size: 16px;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 body {
@@ -54,6 +54,9 @@ button:focus {
   height: 100px;
   background-color: var(--primary1);
   padding: 0;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 .navbar .container {
   position: relative;
