--- a/views/Admin/accounts.hbs
+++ b/views/Admin/accounts.hbs
@@ -37,7 +37,7 @@
               <h2 class="tm-block-title">Change Avatar</h2>
               <div class="tm-avatar-container">
                 <img
-                  src="img/avatar.png"
+                  src="/img/avatar.png"
                   alt="Avatar"
                   class="tm-avatar img-fluid mb-4"
                 />
