--- a/views/Partial/headerAdmin.hbs
+++ b/views/Partial/headerAdmin.hbs
@@ -25,6 +25,19 @@
         </li>
 
         <li class="nav-item">
+            <a class="nav-link" href="/Admin/order">
+                <i class="far fa-list-alt"></i> Order List
+                <span class="sr-only">(current)</span>
+            </a>
+        </li>
+
+        <li class="nav-item">
+        <a class="nav-link" href="/Admin/products">
+            <i class="fas fa-shopping-cart"></i> Products
+        </a>
+        </li>
+
+        <li class="nav-item">
         <a class="nav-link" href="/Admin/manages">
             <i class="fa fa-users"></i> Manage Account
         </a>
@@ -49,11 +62,7 @@
             <a class="dropdown-item" href="#">Yearly Report</a>
         </div>
         </li> --}}
-        <li class="nav-item">
-        <a class="nav-link" href="/Admin/products">
-            <i class="fas fa-shopping-cart"></i> Products
-        </a>
-        </li>
+        
 
         <li class="nav-item">
         <a class="nav-link" href="/Admin/accounts">
