--- a/views/User/productDetail.hbs
+++ b/views/User/productDetail.hbs
@@ -8,7 +8,7 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <link rel="icon" href="img/fevicon.png" type="image/gif" />
+  <link rel="icon" href="/img/fevicon.png" type="image/gif" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-lg-5 mt-5">
                     <div class="card mb-3">
-                        <img class="card-img img-fluid" src="/public/img/p1.png" alt="Card image cap" id="product-detail">
+                        <img class="card-img img-fluid" src="/img/p1.png" alt="Card image cap" id="product-detail">
                     </div>
                     <div class="row">
                         <!--Start Controls-->
@@ -67,17 +67,17 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="/public/img/p1.png" alt="Product Image 1">
+                                                <img class="card-img img-fluid" src="/img/p1.png" alt="Product Image 1">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 2">
+                                                <img class="card-img img-fluid" src="/img/p2.png" alt="Product Image 2">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 3">
+                                                <img class="card-img img-fluid" src="/img/p3.png" alt="Product Image 3">
                                             </a>
                                         </div>
                                     </div>
@@ -89,17 +89,17 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="img/p1.pngg" alt="Product Image 4">
+                                                <img class="card-img img-fluid" src="/img/p3.png" alt="Product Image 4">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 5">
+                                                <img class="card-img img-fluid" src="/img/p2.png" alt="Product Image 5">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 6">
+                                                <img class="card-img img-fluid" src="/img/p1.png" alt="Product Image 6">
                                             </a>
                                         </div>
                                     </div>
@@ -111,17 +111,17 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 7">
+                                                <img class="card-img img-fluid" src="/img/p1.png" alt="Product Image 7">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 8">
+                                                <img class="card-img img-fluid" src="/img/p2.png" alt="Product Image 8">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="img/p1.png" alt="Product Image 9">
+                                                <img class="card-img img-fluid" src="/img/p3.png" alt="Product Image 9">
                                             </a>
                                         </div>
                                     </div>
@@ -226,14 +226,14 @@
             <div class="row text-left p-2 pb-3">
                 <h4>Related Products</h4>
                 <div class="row">
-                    <div class="col-lg-3">
-                        <img src="img/p1.png" alt="">
+                    <div class="col-lg-4">
+                        <img src="/img/p1.png" alt="">
                     </div>
-                    <div class="col-lg-3">
-                        <img src="img/p2.png" alt="">
+                    <div class="col-lg-4">
+                        <img src="/img/p2.png" alt="">
                     </div>
-                    <div class="col-lg-3">
-                        <img src="img/p3.png" alt="">
+                    <div class="col-lg-4">
+                        <img src="/img/p3.png" alt="">
                     </div>
                 </div>
             </div>
