add back to top button. Redirect product items. Set active for nav selected

--- a/views/Admin/add-product.hbs
+++ b/views/Admin/add-product.hbs
@@ -121,6 +121,7 @@
     {{> footerAdmin }}
     {{> scriptAdmin}}
     <script>
+      $('.fa-shopping-cart').parent().addClass('active');
       $(function() {
         $("#expire_date").datepicker();
       });
