--- a/views/Admin/manage-users.hbs
+++ b/views/Admin/manage-users.hbs
@@ -74,6 +74,10 @@
             </div>
         </div>
     </div>
+    {{> footerAdmin}}
+    {{> scriptAdmin}}
+    <script>
+        $('.fa-users').parent().addClass('active');
+    </script>
 </body>
-  {{> footerAdmin}}
 </html>
