--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -669,6 +669,20 @@ input[type="checkbox"]:focus {
   color: #aacbea;
 }
 
+#back-to-top, #back-to-top:hover {
+  display: none;
+  color: rgb(33, 111, 145);
+  position: fixed;
+  right: 2%;
+  bottom: 2%;
+  font-size: 2.5rem;
+  cursor: pointer;
+  z-index: 1;
+  outline: none;
+  border: none;
+  background: none;
+}
+
 @media (min-width: 1200px) {
   .navbar-expand-xl .navbar-nav .nav-link {
     padding-left: 28px;
