--- a/views/Admin/edit-product.hbs
+++ b/views/Admin/edit-product.hbs
@@ -97,7 +97,7 @@
               </div>
               <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
                 <div class="tm-product-img-edit mx-auto">
-                  <img src="img/product-image.jpg" alt="Product image" class="img-fluid d-block mx-auto">
+                  <img src="/img/product-image.jpg" alt="Product image" class="img-fluid d-block mx-auto">
                   <i
                     class="fas fa-cloud-upload-alt tm-upload-icon"
                     onclick="document.getElementById('fileInput').click();"
@@ -125,9 +125,10 @@
     {{> footerAdmin}}
     {{> scriptAdmin}}
     <script>
+      $('.fa-shopping-cart').parent().addClass('active');
       $(function() {
         $("#expire_date").datepicker({
-          defaultDate: "10/22/2020"
+          defaultDate: getDate()
         });
       });
     </script>
