commit product detail

--- a/views/User/product.hbs
+++ b/views/User/product.hbs
@@ -8,7 +8,7 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <link rel="icon" href="img/fevicon.png" type="image/gif" />
+  <link rel="icon" href="/img/fevicon.png" type="image/gif" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
@@ -36,8 +36,8 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="img/p1.png" alt="">
-              <a href="./product/detail" class="add_cart_btn">
+              <img src="/img/p1.png" alt="">
+              <a href="/product/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
                 </span>
@@ -65,7 +65,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="img/p2.png" alt="">
+              <img src="/img/p2.png" alt="">
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
@@ -94,7 +94,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="img/p3.png" alt="">
+              <img src="/img/p3.png" alt="">
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
@@ -123,7 +123,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="img/p4.png" alt="">
+              <img src="/img/p4.png" alt="">
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
@@ -152,7 +152,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="img/p5.png" alt="">
+              <img src="/img/p5.png" alt="">
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
@@ -181,7 +181,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="img/p6.png" alt="">
+              <img src="/img/p6.png" alt="">
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
@@ -210,7 +210,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="img/p7.png" alt="">
+              <img src="/img/p7.png" alt="">
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
@@ -239,7 +239,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="img/p8.png" alt="">
+              <img src="/img/p8.png" alt="">
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
@@ -268,7 +268,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="img/p9.png" alt="">
+              <img src="/img/p9.png" alt="">
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
