--- a/views/User/product.hbs
+++ b/views/User/product.hbs
@@ -37,7 +37,7 @@
           <div class="box">
             <div class="img-box">
               <img src="/img/p1.png" alt="">
-              <a href="/product/detail" class="add_cart_btn">
+              <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
                 </span>
