--- a/views/User/home.hbs
+++ b/views/User/home.hbs
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Minics</title>
+  <title>TechHub</title>
 
   {{> link}}
 </head>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="img/slider-img.png" alt="">
+                    <img src="img/slider-img-2.png" alt="">
                   </div>
                 </div>
               </div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="img/slider-img.png" alt="">
+                    <img src="img/slider-img-3.png" alt="">
                   </div>
                 </div>
               </div>
@@ -134,6 +134,11 @@
                   Add To Cart
                 </span>
               </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
             </div>
             <div class="detail-box">
               <h5>
@@ -161,6 +166,11 @@
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -192,6 +202,11 @@
                   Add To Cart
                 </span>
               </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
             </div>
             <div class="detail-box">
               <h5>
@@ -219,6 +234,11 @@
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -250,6 +270,11 @@
                   Add To Cart
                 </span>
               </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
             </div>
             <div class="detail-box">
               <h5>
@@ -277,6 +302,11 @@
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -308,6 +338,11 @@
                   Add To Cart
                 </span>
               </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
             </div>
             <div class="detail-box">
               <h5>
@@ -337,6 +372,11 @@
                   Add To Cart
                 </span>
               </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
             </div>
             <div class="detail-box">
               <h5>
@@ -364,6 +404,11 @@
               <a href="" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
