--- a/views/User/productDetail.hbs
+++ b/views/User/productDetail.hbs
@@ -21,26 +21,6 @@
 <body class="sub_page">
     {{> header}}
 
-    <!-- Modal -->
-    <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="w-100 pt-1 mb-5 text-right">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form action="" method="get" class="modal-content modal-body border-0 p-0">
-                <div class="input-group mb-2">
-                    <input type="text" class="form-control" id="inputModalSearch" name="q" placeholder="Search ...">
-                    <button type="submit" class="input-group-text bg-success text-light">
-                        <i class="fa fa-fw fa-search text-white"></i>
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-
-
-
     <!-- Open Content -->
     <section class="bg-light">
         <div class="container pb-5">
@@ -201,22 +181,22 @@
                                                 <input type="hidden" name="product-quanity" id="product-quanity"
                                                     value="1">
                                             </li>
-                                            <li class="list-inline-item"><span class="btn btn-success"
+                                            <li class="list-inline-item"><span class="btn"
                                                     id="btn-minus">-</span></li>
-                                            <li class="list-inline-item"><span class="badge bg-secondary"
+                                            <li class="list-inline-item"><span class="badge"
                                                     id="var-value">1</span></li>
-                                            <li class="list-inline-item"><span class="btn btn-success"
+                                            <li class="list-inline-item"><span class="btn"
                                                     id="btn-plus">+</span></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="row pb-3">
                                     <div class="col d-grid">
-                                        <button type="submit" class="btn btn-success btn-lg" name="submit"
+                                        <button type="submit" class="btn btn-lg" name="submit"
                                             value="buy">Buy</button>
                                     </div>
                                     <div class="col d-grid">
-                                        <button type="submit" class="btn btn-success btn-lg" name="submit"
+                                        <button type="submit" class="btn btn-lg" name="submit"
                                             value="addtocard">Add To Cart</button>
                                     </div>
                                 </div>
