--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -60,10 +60,10 @@
               <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="./about"> About</a>
+              <a class="nav-link" href="/about"> About</a>
             </li>
             <li class="nav-item dropdown dropbtn">
-                  <a class="nav-link" href="./product">Products</a>
+                  <a class="nav-link" href="/product">Products</a>
                   <div class="dropdown-content">
                     <a href="./product">Phone</a>
                     <a href="./product">Laptop</a>
@@ -72,7 +72,7 @@
                   </div>
                 </li>
             <li class="nav-item">
-              <a class="nav-link" href="./why">Why Us</a>
+              <a class="nav-link" href="/why">Why Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./testimoninal">Testimonial</a>
