--- a/views/User/product.hbs
+++ b/views/User/product.hbs
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Minics</title>
+  <title>TechHub</title>
   {{> link}}
 
 </head>
@@ -42,6 +42,11 @@
                   Add To Cart
                 </span>
               </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
             </div>
             <div class="detail-box">
               <h5>
@@ -66,9 +71,14 @@
           <div class="box">
             <div class="img-box">
               <img src="/img/p2.png" alt="">
-              <a href="" class="add_cart_btn">
+              <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -95,9 +105,14 @@
           <div class="box">
             <div class="img-box">
               <img src="/img/p3.png" alt="">
-              <a href="" class="add_cart_btn">
+              <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -124,9 +139,14 @@
           <div class="box">
             <div class="img-box">
               <img src="/img/p4.png" alt="">
-              <a href="" class="add_cart_btn">
+              <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -153,9 +173,14 @@
           <div class="box">
             <div class="img-box">
               <img src="/img/p5.png" alt="">
-              <a href="" class="add_cart_btn">
+              <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -182,9 +207,14 @@
           <div class="box">
             <div class="img-box">
               <img src="/img/p6.png" alt="">
-              <a href="" class="add_cart_btn">
+              <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -211,9 +241,14 @@
           <div class="box">
             <div class="img-box">
               <img src="/img/p7.png" alt="">
-              <a href="" class="add_cart_btn">
+              <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -240,9 +275,14 @@
           <div class="box">
             <div class="img-box">
               <img src="/img/p8.png" alt="">
-              <a href="" class="add_cart_btn">
+              <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -269,9 +309,14 @@
           <div class="box">
             <div class="img-box">
               <img src="/img/p9.png" alt="">
-              <a href="" class="add_cart_btn">
+              <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
                 </span>
               </a>
             </div>
@@ -296,7 +341,7 @@
         </div>
       </div>
       <div class="btn_box">
-        <a href="" class="view_more-link">
+        <a href="/detail" class="view_more-link">
           View More
         </a>
       </div>
