add user login.hbs and controller

--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -25,10 +25,10 @@
           </button>
         </from>
         <div class="user_option_box">
-          <a href="" class="account-link">
+          <a href="/login" class="account-link">
             <i class="fa fa-user" aria-hidden="true"></i>
             <span>
-              My Account
+              Login
             </span>
           </a>
           <a href="cart" class="nav-link">
