--- a/views/Admin/products.hbs
+++ b/views/Admin/products.hbs
@@ -29,9 +29,9 @@
               </thead>
               <tbody>
                 {{#products}}
-                <tr data-set={{id}}>
+                <tr>
                   <th scope="row"><input type="checkbox" /></th>
-                  <td class="tm-product-name">{{product_name}}</td>
+                  <td class="tm-product-name" name="id" value={{id}}>{{product_name}}</td>
                   <td>{{ price}}</td>
                   <td>{{ in_stock }}</td>
                   <td>{{ import_date }}</td>
@@ -89,7 +89,7 @@
     $('.fa-shopping-cart').parent().addClass('active');
     $(function () {
       $(".tm-product-name").on("click", function () {
-        window.location.href = "/admin/products/edit";
+        window.location.href = "/admin/products/edit/" + $(this).attr("value");
       });
     });
   </script>
